--- a/sys/sys.vcxproj
+++ b/sys/sys.vcxproj
@@ -371,6 +371,8 @@
     <ClInclude Include="dokan.h" />
     <ClInclude Include="irp_buffer_helper.h" />
     <ClInclude Include="public.h" />
+    <ClInclude Include="public_version.h" />
+    <ClInclude Include="version.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="dokan.rc" />
